# linear_regression

./: .gitignore  README.md  pyproject.toml
linear_regression/: hate_crimes.ipynb  salary.ipynb
