[tool.poetry]
name = "linear_regression"
version = "0.1.0"
description = ""
authors = ["Eugene Monnier <eugene.monnier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
numpy = "^1.18.4"
matplotlib = "^3.2.1"
pandas = "^1.0.3"
sklearn = "^0.0"
seaborn = "^0.10.1"
jupyterlab = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
